--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
@@ -130,4 +128,12 @@ section {
   background-color: #EEBC32;
   border: #000;
   border-radius: 20px;
+}
+
+.taskCard {
+  background-color: #1b2930;
+  border-radius: 16px;
+  padding: 20px;
+  text-align: left;
+  width: 250px;
 }
