--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -13,12 +13,18 @@ input {
 }
 
 header {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
-  background: #000;
+  background: #15514E;
 }
+
+
 
 #logo {
   font-size: 1.5rem;
@@ -27,11 +33,22 @@ header {
   color: #FFF;
 }
 
+.benevoloIconNav {
+  color: #ECDDC1;
+}
+
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 35px;
+}
+
 nav ul {
   display: flex;
   gap: 1rem;
   padding: 0;
-  margin: 0;
+  margin: 5px;
   list-style: none;
 }
 
@@ -131,9 +148,19 @@ footer {
   max-width: 100%;
 }
 
-.sources {
-  font-size: x-small;
+.footerSourcesHeading {
+  margin: 20px;
 
+}
+
+.source {
+  max-width: 50%;
+  margin-left: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  padding: 5px;
+  font-size: x-small;
 }
 
 .taskCard {
