sign up options became a component, created a separate page for the sign in link in the header containing said component

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,6 +1,7 @@
 body {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
-  margin: 0;
+  margin-top: 77px;
+  /* top: 77px; */
 }
 
 input,
@@ -138,6 +139,10 @@ img {
 
 .portal {
   width: 500px;
+}
+
+.signUpPage-Header {
+  font-family: 'Holen Vintage', 'Serif';
 }
 
 .signUpButton {
