--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,3 +1,9 @@
+/* @tailwind base;
+
+@tailwind components;
+
+@tailwind utilities; */
+
 body {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   margin-top: 77px;
@@ -187,3 +193,6 @@ footer {
   width: 250px;
 
 }
+
+
+
