--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,15 +5,6 @@
 @tailwind utilities;
 
 /* import fonts */
-@font-face {
-  font-family: 'Holen Vintage';
-  src: url(CivicTech/Benevolo-CivTech/frontend/src/styles/Fonts/Big\ Fonts/Holen_Vintage.ttf);
-}
-
-@font-face {
-  font-family: '';
-  src: url();
-}
 
 
 body {
@@ -99,12 +90,27 @@ nav a {
   text-align: center;
 }
 
+/* Helper user page css  */
+.welcomeHeaderHelper {
+  font-family: "Tiro Devanagari Hindi", serif;
+  font-weight: 800;
+  font-style: normal;
+  margin-top: 100px;
+  margin-left: 45px;
+  font-size: 45px;
 
+
+}
+
+.helperElement {
+  margin: 0;
+}
+
+/* -------------------------------------------------------------------------------------- */
 /* Helper Tab CSS */
 /* formats the tabs within the container */
 .tabs-container {
   width: 800px;
-  margin: 20px auto;
 }
 
 /* formats the tabs themselves */
@@ -116,14 +122,14 @@ nav a {
 .tab {
   cursor: pointer;
   padding: 10px;
+  border-radius: 40px, 40px, 0px, 0px;
   margin-right: 10px;
-  border: 1px solid #ddd;
   border-bottom: none;
-  background-color: #ddd;
+  background-color: #19615E;
 }
 
 .tab.active-tab {
-  background-color: #f1f1f1;
+  background-color: #7B9D87;
 }
 
 .content-container {}
@@ -135,8 +141,7 @@ nav a {
 .tab-content.active-content {
   display: block;
   visibility: visible;
-  border: 1px solid #f1f1f1;
-  background-color: #f1f1f1;
+  background-color: #7B9D87;
   padding: 10px;
 }
 
@@ -170,9 +175,9 @@ nav a {
 }
 
 .interest-button {
-  background-color: #007bff;
+  background-color: #66A376;
   /* Bootstrap primary color */
-  color: white;
+  color: #F7F5D0;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
@@ -182,7 +187,7 @@ nav a {
 }
 
 .interest-button.active {
-  background-color: #4C7E6F;
+  background-color: #19615E;
   /* Bootstrap primary color */
   color: white;
   padding: 0.5rem 1rem;
@@ -335,7 +340,7 @@ footer {
   background-color: brown;
 }
 
-#helperBody {
+#helperTasks {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -344,17 +349,13 @@ footer {
 #taskFeed {
   display: flex;
   flex-flow: column wrap;
-  padding: 25px;
+  margin-right: 20px;
 }
 
 #taskContainer {
   display: flex;
   flex-flow: column wrap;
-  padding: 20px;
-  background-color: #F7F5D0;
-  border: 5px;
-  border-radius: 20px;
-  border-color: #000;
+
 
 }
 
